@@ -1,3 +1,8 @@
+2008-02-08 Fred Kiefer <FredKiefer@gmx.de>
+
+        * Source/art/ARTContext.m (-GSDrawImage:): Hack to allow the
+	handling of pre-multiplied bitmaps.
+
 2008-01-31 Fred Kiefer <FredKiefer@gmx.de>
 
 	* Tools/win32pbs.m: Use event polling code from WIN32Server.m.
